@@ -6,11 +6,13 @@ import myavocat.legit.model.User;
 import myavocat.legit.response.ApiResponse;
 import myavocat.legit.service.TacheService;
 import myavocat.legit.service.UserService;
+import myavocat.legit.service.mapper.TacheMapperService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/taches")
@@ -23,19 +25,25 @@ public class TacheController {
     @Autowired
     private UserService userService;
 
+    @Autowired
+    private TacheMapperService tacheMapperService;
+
     /**
      * Créer une tâche uniquement si les deux utilisateurs (créateur et destinataire) sont dans le même office
      */
     @PostMapping("/create/{userId}/{officeId}")
     public ApiResponse createTache(@PathVariable UUID userId,
                                    @PathVariable UUID officeId,
-                                   @RequestBody Tache tache) {
+                                   @RequestBody TacheDTO tacheDTO) {
         try {
             // La vérification d'appartenance à l'office est déjà faite ici, mais également par sécurité dans le service
             User creator = userService.getUserById(userId);
             if (creator == null || !creator.getOffice().getId().equals(officeId)) {
                 return new ApiResponse(false, "Vous n'êtes pas autorisé à créer une tâche dans cet office.", null);
             }
+
+            // Conversion du DTO vers l'entité
+            Tache tache = tacheMapperService.convertFromDTO(tacheDTO);
 
             // Vérification de l'utilisateur assigné si spécifié
             if (tache.getUser() != null) {
@@ -47,8 +55,11 @@ public class TacheController {
 
             // Appel de la méthode correcte sécurisée
             Tache createdTache = tacheService.createTacheWithOfficeCheck(userId, officeId, tache);
-            return new ApiResponse(true, "Tâche créée avec succès.", convertToDTO(createdTache));
 
+            // Conversion de l'entité vers DTO pour la réponse
+            TacheDTO responseDTO = tacheMapperService.convertToDTO(createdTache);
+
+            return new ApiResponse(true, "Tâche créée avec succès.", responseDTO);
 
         } catch (RuntimeException e) {
             return new ApiResponse(false, "Erreur : " + e.getMessage(), null);
@@ -56,7 +67,6 @@ public class TacheController {
             return new ApiResponse(false, "Erreur inconnue : " + e.getMessage(), null);
         }
     }
-
 
     /**
      * Récupérer toutes les tâches d'un utilisateur si il appartient à l'office spécifié
@@ -69,12 +79,12 @@ public class TacheController {
                 return new ApiResponse(false, "Utilisateur non autorisé.", null);
             }
 
-           List<Tache> taches = tacheService.findByUserId(userId);
+            List<Tache> taches = tacheService.findByUserId(userId);
             List<TacheDTO> dtoList = taches.stream()
-                    .map(this::convertToDTO)
-                    .toList();
-            return new ApiResponse(true, "Tâches récupérées avec succès.", dtoList);
+                    .map(tacheMapperService::convertToDTO)
+                    .collect(Collectors.toList());
 
+            return new ApiResponse(true, "Tâches récupérées avec succès.", dtoList);
 
         } catch (Exception e) {
             return new ApiResponse(false, "Erreur lors de la récupération : " + e.getMessage(), null);
@@ -110,34 +120,65 @@ public class TacheController {
         }
     }
 
-    private TacheDTO convertToDTO(Tache tache) {
-        TacheDTO dto = new TacheDTO();
-        dto.setId(tache.getId());
-        dto.setTitre(tache.getTitre());
-        dto.setDescription(tache.getDescription());
-        dto.setStatut(tache.getStatut().name());
-        dto.setDateEcheance(tache.getDateEcheance());
-        dto.setCreatedAt(tache.getCreatedAt());
-        dto.setUpdatedAt(tache.getUpdatedAt());
+    @GetMapping("/{userId}/{officeId}/{tacheId}")
+    public ApiResponse getTacheById(@PathVariable UUID userId,
+                                    @PathVariable UUID officeId,
+                                    @PathVariable Long tacheId) {
+        try {
+            User user = userService.getUserById(userId);
+            if (user == null || !user.getOffice().getId().equals(officeId)) {
+                return new ApiResponse(false, "Utilisateur non autorisé.", null);
+            }
 
-        if (tache.getDossier() != null) {
-            TacheDTO.DossierSimpleDTO dossierDTO = new TacheDTO.DossierSimpleDTO();
-            dossierDTO.setId(tache.getDossier().getId().toString());
-            dossierDTO.setReference(tache.getDossier().getReference());
-            dossierDTO.setNomDossier(tache.getDossier().getNomDossier());
-            dto.setDossier(dossierDTO);
+            Tache tache = tacheService.findById(tacheId)
+                    .orElseThrow(() -> new RuntimeException("Tâche introuvable."));
+
+            // Vérifier si l'utilisateur appartient bien au même office que la tâche
+            if (tache.getUser() != null && !tache.getUser().getOffice().getId().equals(officeId)) {
+                return new ApiResponse(false, "Vous n'avez pas accès à cette tâche.", null);
+            }
+
+            return new ApiResponse(true, "Tâche trouvée.", tacheMapperService.convertToDTO(tache));
+
+        } catch (Exception e) {
+            return new ApiResponse(false, "Erreur lors de la récupération de la tâche : " + e.getMessage(), null);
         }
-
-        if (tache.getUser() != null) {
-            TacheDTO.UserSimpleDTO userDTO = new TacheDTO.UserSimpleDTO();
-            userDTO.setId(tache.getUser().getId().toString());
-            userDTO.setNom(tache.getUser().getNom());
-            userDTO.setPrenom(tache.getUser().getPrenom());
-            userDTO.setEmail(tache.getUser().getEmail());
-            dto.setUser(userDTO);
-        }
-
-        return dto;
     }
 
+    @PutMapping("/{userId}/{officeId}/{tacheId}")
+    public ApiResponse updateTache(@PathVariable UUID userId,
+                                   @PathVariable UUID officeId,
+                                   @PathVariable Long tacheId,
+                                   @RequestBody TacheDTO tacheDTO) {
+        try {
+            User user = userService.getUserById(userId);
+            if (user == null || !user.getOffice().getId().equals(officeId)) {
+                return new ApiResponse(false, "Utilisateur non autorisé.", null);
+            }
+
+            Tache tache = tacheService.findById(tacheId)
+                    .orElseThrow(() -> new RuntimeException("Tâche introuvable."));
+
+            if (tache.getUser() != null && !tache.getUser().getOffice().getId().equals(officeId)) {
+                return new ApiResponse(false, "Vous n'êtes pas autorisé à modifier cette tâche.", null);
+            }
+
+            // Mise à jour des champs à partir du DTO
+            tache = tacheMapperService.updateEntityFromDTO(tache, tacheDTO);
+
+            // Si l'utilisateur a été modifié, vérifier qu'il appartient bien au même office
+            if (tache.getUser() != null && !tache.getUser().getOffice().getId().equals(officeId)) {
+                return new ApiResponse(false, "L'utilisateur assigné n'appartient pas à cet office.", null);
+            }
+
+            Tache saved = tacheService.save(tache);
+
+            return new ApiResponse(true, "Tâche mise à jour avec succès.", tacheMapperService.convertToDTO(saved));
+
+        } catch (RuntimeException e) {
+            return new ApiResponse(false, e.getMessage(), null);
+        } catch (Exception e) {
+            return new ApiResponse(false, "Erreur lors de la mise à jour : " + e.getMessage(), null);
+        }
+    }
 }
